--- a/web/style.css
+++ b/web/style.css
@@ -49,8 +49,8 @@ body {
 #overlay {
     position: fixed;
     display: none;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background: rgb(60,60,60, 0.9);
     z-index: 2 !important;
 }
@@ -128,22 +128,26 @@ button {
 
 #room-panel {
     position: absolute;
-    width: 600px;
+    width: 80%;
+    height: 70%;
     background: #F8FDFF;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 10px;
+    display: flex;
+    flex-flow: column;
 }
 
 #room-board {
     float: left;
-    width: 400px;
-    height: 800px;
+    width: calc(80% - 40px);
+    height: calc(100% - 40px);
     padding: 20px;
 }
 
 .room-side {
+    height: 100%;
 }
 
 #room-title {
@@ -159,9 +163,11 @@ button {
     font-weight: bold;
     font-size: 16px;
     list-style-type: circle;
+    overflow-x: auto;
+    overflow-y: auto;
 }
 
-#user-me {
+.user-me {
     color: #008000;
     list-style-type: disc;
 }
